--- a/zedbot_demo/zedbot_people_tracking/CMakeLists.txt
+++ b/zedbot_demo/zedbot_people_tracking/CMakeLists.txt
@@ -17,9 +17,6 @@ find_package(catkin REQUIRED COMPONENTS
   tf
  )
 
-generate_messages(DEPENDENCIES
-    zed_wrapper
-)
 
 ## Declare a catkin package
 catkin_package()
@@ -43,4 +40,4 @@ include_directories(include ${catkin_INCLUDE_DIRS})
 add_executable(people_tracking src/people_tracking.cpp)
 target_link_libraries(people_tracking ${catkin_LIBRARIES})
 
-add_dependencies(zed_obj_det_sub ${catkin_EXPORTED_TARGETS})
+add_dependencies(people_tracking ${catkin_EXPORTED_TARGETS})
