--- a/zedbot_demo/zedbot_people_tracking/CMakeLists.txt
+++ b/zedbot_demo/zedbot_people_tracking/CMakeLists.txt
@@ -17,6 +17,10 @@ find_package(catkin REQUIRED COMPONENTS
   tf
  )
 
+find_package(ZED 3 REQUIRED)
+find_package(CUDA REQUIRED)
+find_package(OpenSSL REQUIRED)
+
 if(WIN32)
     SET(SL_IOT_BIN_DIR "$ENV{ZED_SDK_ROOT_DIR}/bin")
     SET(SL_IOT_LIB_DIR "$ENV{ZED_SDK_ROOT_DIR}/lib")
@@ -38,14 +42,24 @@ include_directories(
         ${catkin_INCLUDE_DIRS}
         ${CUDA_INCLUDE_DIRS}
         ${ZED_INCLUDE_DIRS}
-        ${SL_IOT_INCLUDE_DIR}
 )
+
+include_directories(${ZED_INCLUDE_DIRS})
+include_directories(${CUDA_INCLUDE_DIRS})
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
+include_directories(${OPENSSL_INCLUDE_DIR})
+include_directories(${SL_IOT_INCLUDE_DIR})
+include_directories(include ${catkin_INCLUDE_DIRS})
+
+
+find_package(OpenSSL REQUIRED)
+include_directories(${OPENSSL_INCLUDE_DIR})
 
 link_directories(${ZED_LIBRARY_DIR})
 link_directories(${CUDA_LIBRARY_DIRS})
+link_directories(${OPENSSL_SSL_LIBRARY})
 link_directories(${SL_IOT_LIB_DIR})
 
-include_directories(include ${catkin_INCLUDE_DIRS})
 
 ## Build 
 
