--- a/zedbot_demo/zedbot_people_tracking/params/move_base_params/teb_local_planner_params_burger.yaml
+++ b/zedbot_demo/zedbot_people_tracking/params/move_base_params/teb_local_planner_params_burger.yaml
@@ -14,10 +14,11 @@ TebLocalPlannerROS:
     
  # Robot
          
- max_vel_x: 0.22
+ max_vel_x: 0.05
  max_vel_x_backwards: 0.02
  max_vel_theta: 0.3
  acc_lim_x: 0.03
+ acc_lim_y: 0.0
  acc_lim_theta: 0.03
  min_turning_radius: 0.0
  footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
